express/blocks/search-marquee/search-marquee.css
main .section .search-marquee-wrapper {
    max-width: none;
}

main .search-marquee {
    padding: 32px 28px;
    margin-bottom: 24px;
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main .search-marquee .search-marquee-bg {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
    z-index: 0;
}

main .search-marquee .search-dropdown-container {
    background: #FFFFFF;
    top: calc(100% + 6px);
    border-radius: 12px;
    box-shadow: 0 0 20px #00000029;
    position: absolute;
    width: 100%;
    box-sizing: border-box;
    left: 0;
    z-index: 2;
}

main .search-marquee .search-dropdown-container .dropdown-title {
    margin: 0;
    font-size: 14px;
    color: var(--color-gray-500);
}

main .search-marquee .search-dropdown-container .trends-container,
main .search-marquee .search-dropdown-container .suggestions-container {
    padding: 20px 28px 0;
    text-align: left;
}

main .search-marquee .search-dropdown-container .trends-container .from-scratch-link {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-bottom: 16px;
}

main .search-marquee .search-dropdown-container .trends-container ul,
main .search-marquee .search-dropdown-container .suggestions-container ul {
    padding-left: 0;
    list-style: none;
    max-height: 216px;
    overflow: auto;
}

main .search-marquee .search-dropdown-container .trends-container .trends-wrapper li,
main .search-marquee .search-dropdown-container .suggestions-container li {
    margin-bottom: 16px;
}

main .search-marquee .search-dropdown-container .suggestions-container li {
    cursor: pointer;
}

main .search-marquee .search-dropdown-container .suggestions-container li:hover {
    color: var(--color-info-accent);
}

main .search-marquee .search-dropdown-container .trends-container .trends-wrapper li a {
    color: var(--color-black);
}

main .search-marquee .search-dropdown-container .suggestions-container {
    min-width: 300px;
}

main .search-marquee .search-dropdown-container .free-plans-container .free-plan-widget {
    width: 100%;
    border-radius: 0 0 12px 12px;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    margin: 0;
    justify-content: center;
}

main .search-marquee .search-bar-wrapper {
    position: relative;
    width: 100%;
    max-width: 560px;
    margin: 0 28px;
    height: max-content;
    transition: max-width 0.5s;
}

main .search-marquee .search-bar-wrapper .search-bar {
    box-sizing: border-box;
    margin: 0;
    font-family: var(--body-font-family);
    font-weight: 400;
    font-size: 16px;
    padding: 10px 40px;
    border: var(--color-gray-200) 2px solid;
    border-radius: 100px;
    max-width: 560px;
    width: 100%;
    height: 41px;
    transition: max-width 0.5s, padding-right 0.5s, padding-left 0.5s;
}

main .search-marquee .search-bar-wrapper .search-bar::placeholder {
    transition: color 0.5s;
}

main .search-marquee .search-bar-wrapper .search-bar:focus-visible,
main .search-marquee .search-bar-wrapper .search-bar:focus {
    border: #444444 2px solid;
    outline: none;
}

main .search-marquee .search-bar-wrapper .icon.icon-search {
    position: absolute;
    z-index: 1;
    height: 16px;
    width: 16px;
    cursor: pointer;
    top: 50%;
    transform: translateY(-50%);
    transition: left 0.5s;
    left: 16px;
}

main .search-marquee .search-bar-wrapper .icon.icon-search-clear {
    position: absolute;
    z-index: 1;
    height: 16px;
    width: 16px;
    cursor: pointer;
    top: 50%;
    transform: translateY(-50%);
    right: 40px;
}

main .search-marquee .carousel-container {
    margin-top: 32px;
    margin-bottom: 0;
}

main .search-marquee.spreadsheet-powered .carousel-container {
    visibility: hidden;
}

main .search-marquee.spreadsheet-powered .carousel-container.appear {
    visibility: unset;
}

main .search-marquee .carousel-container .carousel-platform {
    margin: auto;
}

main .search-marquee .carousel-container .carousel-platform p.button-container {
    margin: 0;
    border: none;
}

main .search-marquee .carousel-container .carousel-platform a {
    display: block;
    box-sizing: border-box;
    min-width: 160px;
    min-height: 48px;
    padding: 14px 27px;
    color: var(--color-black);
    font-size: 16px;
    line-height: 20px;
    background: var(--color-white);
    border-radius: 50px;
    margin: 0 4px;
    border: none;
}

main .search-marquee .carousel-container .carousel-platform a:hover {
    background-color: var(--color-gray-200);
}

main .search-marquee .hidden {
    display: none;
}

main .search-marquee .carousel-container .carousel-fader-right,
main .search-marquee .carousel-container .carousel-fader-left {
    background: unset;
}

@media (min-width: 600px) {
    main .search-marquee .search-dropdown-container .free-plans-container .free-plan-widget {
        flex-direction: row;
    }
}

